# swh-web

./: .achecker.yml  .copier-answers.yml  .copyright-updater.yaml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTORS  FORGES.rst  MANIFEST.in  Makefile  Makefile.local  PKG-INFO  README  README-dev.md  README-uri-scheme.md  README.md  README.rst  conftest.py  cypress.config.js  cypress.json  eslint.config.js  hatch_build.py  mypy.ini  nyc.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-swh.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  swh-web_0.0.1.orig.tar.gz.delta  swh-web_0.0.1.orig.tar.gz.id  swh-web_0.0.10.orig.tar.gz.delta  swh-web_0.0.10.orig.tar.gz.id  swh-web_0.0.100.orig.tar.gz.delta  (+846 more)
assets/config/: .bootstraprc  .eslintignore  .eslintrc  bootstrap-pre-customize.scss  webpack.config.development.js  webpack.config.production.js
cypress/e2e/: accessibility.cy.js  add-forge-now-request-create.cy.js  add-forge-now-request-dashboard.cy.js  add-forge-now-requests-moderation.cy.js  admin.cy.js  alter.cy.js  api-tokens.cy.js  code-highlighting.cy.js  content-display.cy.js  content-rendering.cy.js  coverage.cy.js  deposit-admin.cy.js  directory.cy.js  errors.cy.js  home.cy.js  language-select.cy.js  layout.cy.js  mailmap.cy.js  origin-browse.cy.js  origin-save-list.cy.js  origin-save.cy.js  origin-search.cy.js  origin-visits.cy.js  persistent-identifiers.cy.js  revision-diff.cy.js  sidebar.cy.js  sidetabs.cy.js  statics.js  swhids.cy.js  vault.cy.js
cypress/fixtures/: add-forge-now-request.json  add-forge-now-requests.json  origin-save.json  save-task-info.json  source-file-extensions.json  source-file-names.json  swh:1:rev:1c480a4573d2a003fc2630c21c2b25829de49972.git.tar
cypress/integration/: add-forg-now.spec.js  add-forge-moderation.spec.js  add-forge-now-moderation.spec.js  add-forge-now-request-create.spec.js  add-forge-now-request-dashboard.spec.js  add-forge-now-requests-moderation.spec.js  add-forge-now.spec.js  admin.spec.js  api-tokens.spec.js  back-to-top.spec.js  code-highlighting.spec.js  content-display.spec.js  content-rendering.spec.js  deposit-admin.spec.js  directory.spec.js  errors.spec.js  guided-tour.spec.js  home.spec.js  language-select.spec.js  layout.spec.js  origin-browse.spec.js  origin-save.spec.js  origin-search.spec.js  origin-visits.spec.js  persistent-identifiers.spec.js  revision-diff.spec.js  sidebar.spec.js  utils.js  vault.spec.js
cypress/plugins/: index.js
cypress/support/: e2e.js  index.js
cypress/utils/: index.js
debian/: changelog  control  copyright  gbp.conf  postinst  pybuild.testfiles  rules
docs/: .gitignore  Makefile  conf.py  dependencies.dot  developers-info.rst  index.rst  uri-scheme-api-content.rst  uri-scheme-api-directory.rst  uri-scheme-api-extid.rst  uri-scheme-api-graph.rst  uri-scheme-api-identifiers.rst  uri-scheme-api-origin.rst  uri-scheme-api-person.rst  uri-scheme-api-provenance.rst  uri-scheme-api-release.rst  uri-scheme-api-request-archival.rst  uri-scheme-api-revision.rst  uri-scheme-api-snapshot.rst  uri-scheme-api-stat.rst  uri-scheme-api-swhids.rst  uri-scheme-api-vault.rst  uri-scheme-api.rst  uri-scheme-browse-content.rst  uri-scheme-browse-directory.rst  uri-scheme-browse-identifiers.rst  uri-scheme-browse-origin.rst  uri-scheme-browse-person.rst  uri-scheme-browse-release.rst  uri-scheme-browse-revision.rst  uri-scheme-browse-snapshot.rst  uri-scheme-browse.rst  uri-scheme-identifiers.rst  uri-scheme-misc.rst  uri-scheme-swhids.rst  uri-scheme.rst
docs/source/: conf.py  index.rst  modules.rst  swh.web.ui.rst
mirror_demo/: config.yml
mirror_demo/templates/: mirror-footer.html  mirror-homepage.html
resources/test/: web-ui.ini  webapp.ini  webapp.yml
static/: webpack-stats.json
static/css/: add_forge.737aa359fb467b5670bc.css  add_forge.737aa359fb467b5670bc.css.map  add_forge_now.4f93c9769bc36a247915.css  add_forge_now.4f93c9769bc36a247915.css.map  archive_coverage.243fd0a38715dd7ff3e5.css  archive_coverage.243fd0a38715dd7ff3e5.css.map  archive_coverage.4b433802060ecf58a2a1.css  archive_coverage.4b433802060ecf58a2a1.css.map  archive_coverage.5e21c7be17e28713ab00.css  archive_coverage.5e21c7be17e28713ab00.css.map  archive_coverage.6573148e19d3c98015b4.css  archive_coverage.6573148e19d3c98015b4.css.map  archive_coverage.73733364590fd3c5af2b.css  archive_coverage.73733364590fd3c5af2b.css.map  archive_coverage.83c90a96007e373d039d.css  archive_coverage.83c90a96007e373d039d.css.map  archive_coverage.8bceb4f6ba428bd57acd.css  archive_coverage.8bceb4f6ba428bd57acd.css.map  auth.0336a94c2c02b4b2a4f4.css  auth.0336a94c2c02b4b2a4f4.css.map  auth.7b9039b237ee77875d0c.css  auth.7b9039b237ee77875d0c.css.map  auth.a07f352a98cf2ad8d7f5.css  auth.a07f352a98cf2ad8d7f5.css.map  auth.e359092994eca9d1525c.css  auth.e359092994eca9d1525c.css.map  auth.fe3a2fb95e1f021b52c9.css  auth.fe3a2fb95e1f021b52c9.css.map  badges.03c8b295a163a9306210.css  badges.03c8b295a163a9306210.css.map  browse.0f243d164dcdaeda84db.css  browse.0f243d164dcdaeda84db.css.map  browse.1278a5934f9b1e2803a0.css  browse.1278a5934f9b1e2803a0.css.map  browse.1cdab46b7a5138285c00.css  browse.1cdab46b7a5138285c00.css.map  browse.260c14cef350b29cb6a1.css  browse.260c14cef350b29cb6a1.css.map  browse.26241d62104088bfcb78.css  browse.26241d62104088bfcb78.css.map  (+612 more)
static/js/: add_forge.03e0bae717562b1ac100.js  add_forge.03e0bae717562b1ac100.js.map  add_forge.0a863a233c1caba67894.js  add_forge.0a863a233c1caba67894.js.map  add_forge.6d7376990eabad2fde82.js  add_forge.6d7376990eabad2fde82.js.map  add_forge.a604e4bddd5327ba7c28.js  add_forge.b03ba291e43a6431bc44.js  (+3177 more)
swh/: __init__.py
swh.web.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
swh.web.ui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+3120 files in other folders)
