[project]
name = "swh.web"
authors = [
    { name = "Software Heritage developers", email = "swh-devel@inria.fr" },
]

description = "Software Heritage web UI"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
include = ["swh.*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt", "requirements-swh.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
testing = { file = ["requirements-test.txt"] }

[project.urls]
"Homepage" = "https://gitlab.softwareheritage.org/swh/devel/swh-web"
"Bug Reports" = "https://gitlab.softwareheritage.org/swh/devel/swh-web/-/issues"
"Funding" = "https://www.softwareheritage.org/donate"
"Documentation" = "https://docs.softwareheritage.org/devel/swh-web/"
"Source" = "https://gitlab.softwareheritage.org/swh/devel/swh-web.git"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.1"

[tool.black]
target-version = ['py37']
exclude = 'swh/web/tests/resources/contents'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_sort_within_sections = true
known_first_party = ['swh']
known_django = 'django,rest_framework'
sections = 'FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER'

[tool.djlint]
# https://www.djlint.com/docs/linter/#rules
ignore = "H006,H020,H021,H023,H029,H030,H031"
indent = 2
blank_line_after_tag = "endcomment,extends,load,endblock"
max_line_length = 100
